ToolRunner: pass --sun-misc-unsafe-memory-access=allow to forked tool processes
JMXCompatibilityTest (and any test using ToolRunner.invoke with a forked
process) was failing on JDK 25 with:

  WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
  WARNING: sun.misc.Unsafe::arrayBaseOffset has been called by
    org.cliffc.high_scale_lib.NonBlockingHashMap

assertCleanStdErr treats any unfiltered stderr output as a failure.
The fix is to pass --sun-misc-unsafe-memory-access=allow via JVM_OPTS
to the forked subprocess, silencing the JEP 471 terminal-deprecation
warning (already present in jvm25-clients.options for the main JVM,
but forked tool processes need it explicitly in their environment).